# writ

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.claude/commands/: autowork.md
.github/workflows/: ci.yml
bootstrap/: lexer.writ
crates/writ-ast/: Cargo.toml
crates/writ-ast/src/: ast.rs  diagnostic.rs  id.rs  lib.rs  span.rs
crates/writ-check/: Cargo.toml
crates/writ-check/src/: authority.rs  builtins.rs  capabilities.rs  effects.rs  lib.rs  resolve.rs  taint.rs  ty.rs  types.rs
crates/writ-check/tests/: authority.rs  capabilities.rs  demo_capability.rs  effects.rs  grant.rs  honesty.rs  resolve.rs  taint.rs  types.rs
crates/writ-cli/: Cargo.toml
crates/writ-cli/src/: lib.rs  main.rs
crates/writ-cli/tests/: cli.rs  cross_module.rs  differential.rs  examples_check.rs  file_io.rs  hermetic.rs  lexer.rs  prelude.rs  sandbox.rs  std_list.rs
crates/writ-codegen/: Cargo.toml
crates/writ-codegen/src/: lib.rs
crates/writ-codegen/tests/: emit.rs
crates/writ-interp/: Cargo.toml
crates/writ-interp/src/: env.rs  lib.rs  value.rs
crates/writ-interp/tests/: contract_lowering.rs  demo_contract.rs  examples.rs  higher_order.rs  text_builtins.rs
crates/writ-lexer/: Cargo.toml
crates/writ-lexer/src/: lib.rs  token.rs
crates/writ-lower/: Cargo.toml
crates/writ-lower/src/: lib.rs  link.rs
crates/writ-lower/tests/: lower.rs
crates/writ-parser/: Cargo.toml
crates/writ-parser/src/: lib.rs
crates/writ-parser/tests/: golden.rs
crates/writ-parser/tests/corpus/: arithmetic.ast  arithmetic.tokens  arithmetic.writ  conditional.ast  conditional.tokens  conditional.writ  let_and_calls.ast  let_and_calls.tokens  let_and_calls.writ  modules.ast  modules.tokens  modules.writ  operators.ast  operators.tokens  operators.writ  signature.ast  signature.tokens  signature.writ  sum_types.ast  sum_types.tokens  sum_types.writ
crates/writ-verify/: Cargo.toml
crates/writ-verify/src/: lib.rs  smt.rs
crates/writ-verify/tests/: verify.rs
docs/: errors.md  getting-started.md  spec.md
editors/vscode/: README.md  package.json
editors/vscode/fileicons/: writ-icon-theme.json
editors/vscode/syntaxes/: writ.tmLanguage.json
examples/: contract.writ  custom_capability.writ  factorial.writ  hello.writ  option.writ  reject_fs_write.writ  reject_wrong_answer.writ  rock_paper_scissors.writ  sanitize.writ  shapes.writ  text.writ
examples/modules/: app.writ  math.writ
std/: list.writ
