[package]
name = "writ-codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
writ-ast.workspace = true

[dev-dependencies]
# Test-only: parse + lower real source so codegen tests operate on the exact
# tree a back end receives. Keeps the crate graph acyclic.
writ-parser.workspace = true
writ-lower.workspace = true
